--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
-                                    <p>a <strong>web developer.</strong></p>
-                                    <p>a <strong>web Designer.</strong></p>
-                                    <p>a <strong>photographer.</strong></p>
+                                    <p>a <strong>112几把最小的郭亮.</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
                             </div>
@@ -152,15 +150,16 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Name:</strong>  Mahira Rashid</li>
-                                                <li><strong>Phone:</strong>  254 - 2563 - 2154</li>
-                                                <li><strong>Address:</strong>  San francisco, USA</li>
+                                                <li><strong>Name:</strong>  伪善</li>
+                                                <li><strong>Phone:</strong>  18576090546</li>
+                                                <li><strong>Address:</strong>  广东中山</li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Email:</strong>  mahirarashid@gmail.com</li>
+                                                <li><strong>Email:</strong>  2569646547@qq.com</li>
                                                 <li><strong>Freelance:</strong>  Available</li>
+                                                <li><strong>WeChat:</strong>  Pixel_Experience</li>
                                             </ul>
                                         </div>
                                     </div>
